Update navigation spacing issue.

--- a/src/css/base/_typography.css
+++ b/src/css/base/_typography.css
@@ -148,7 +148,7 @@ ul li::before {
     font-weight: bold;
     display: inline-block;
     width: 1em;
-    margin-left: -1em;
+    margin-left: 1em;
 }
 
 ol {
